--- a/speccorrmtx.tex
+++ b/speccorrmtx.tex
@@ -19,3 +19,28 @@
         \bottomrule
   \end{tabular}
 \end{table}
+
+
+
+\begin {table}[H]
+  \caption{Correlations between the SPEC sub-scales and the METT}
+  \label{table:specmettcorr}
+  \begin{tabular}{lr}
+    \toprule
+    SPEC sub-scale &       r \\
+    \midrule
+    Identification  Self   &  0.0831 \\
+    Understanding  Self    &  0.2260 \\
+    Expression  Self       &  0.1861 \\
+    Regulation  Self       & -0.0633 \\
+    Use  Self              & -0.0672 \\
+    Identification  Others &  0.0948 \\
+    Understanding  Others  &  0.1709 \\
+    Expression  Others     &  0.2091 \\
+    Regulation  Others     &  0.1050 \\
+    Use  Others            & -0.2848 \\
+    \midrule
+    \textbf{Total}      &  0.1178 \\
+    \bottomrule
+  \end{tabular}
+\end{table}
