more spec stuff

--- a/result-analysis/spec.ipynb
+++ b/result-analysis/spec.ipynb
@@ -117,93 +117,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>IdentificationSelf</th>\n",
-       "      <td> 0.0831</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UnderstandingSelf</th>\n",
-       "      <td> 0.2260</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ExpressionSelf</th>\n",
-       "      <td> 0.1861</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RegulationSelf</th>\n",
-       "      <td>-0.0633</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UseSelf</th>\n",
-       "      <td>-0.0672</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>IdentificationOthers</th>\n",
-       "      <td> 0.0948</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UnderstandingOthers</th>\n",
-       "      <td> 0.1709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ExpressionOthers</th>\n",
-       "      <td> 0.2091</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RegulationOthers</th>\n",
-       "      <td> 0.1050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UseOthers</th>\n",
-       "      <td>-0.2848</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TotalTraitEmotion</th>\n",
-       "      <td> 0.1178</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           0\n",
-       "IdentificationSelf    0.0831\n",
-       "UnderstandingSelf     0.2260\n",
-       "ExpressionSelf        0.1861\n",
-       "RegulationSelf       -0.0633\n",
-       "UseSelf              -0.0672\n",
-       "IdentificationOthers  0.0948\n",
-       "UnderstandingOthers   0.1709\n",
-       "ExpressionOthers      0.2091\n",
-       "RegulationOthers      0.1050\n",
-       "UseOthers            -0.2848\n",
-       "TotalTraitEmotion     0.1178"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lr}\n",
+      "\\toprule\n",
+      "{} &       r \\\\\n",
+      "\\midrule\n",
+      "Identification  Self   &  0.0831 \\\\\n",
+      "Understanding  Self    &  0.2260 \\\\\n",
+      "Expression  Self       &  0.1861 \\\\\n",
+      "Regulation  Self       & -0.0633 \\\\\n",
+      "Use  Self              & -0.0672 \\\\\n",
+      "Identification  Others &  0.0948 \\\\\n",
+      "Understanding  Others  &  0.1709 \\\\\n",
+      "Expression  Others     &  0.2091 \\\\\n",
+      "Regulation  Others     &  0.1050 \\\\\n",
+      "Use  Others            & -0.2848 \\\\\n",
+      "TotalTraitEmotion      &  0.1178 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "pd.DataFrame(dt[SPEC_SCALES].apply(lambda a: a.corr(dt[METT[0]])).round(4))"
+    "corr_mett = pd.DataFrame(dt[SPEC_SCALES].apply(lambda a: a.corr(dt[METT[0]])).round(4))\n",
+    "corr_mett.columns = [\"r\"]\n",
+    "corr_mett.index = (x.replace(\"Self\", \" Self\").replace(\"Others\", \" Others\") for x in descriptives.index)\n",
+    "print corr_mett.to_latex()"
    ]
   },
   {
