--- a/result-analysis/spec.ipynb
+++ b/result-analysis/spec.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from scipy import stats\n",
     "raw = pd.read_csv(\"scored_spec.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -36,14 +37,14 @@
     "    'TotalTraitEmotion'\n",
     "]\n",
     "\n",
-    "RELVANT = METT + SPEC_SCALES\n",
+    "RELEVANT = METT + SPEC_SCALES\n",
     "\n",
     "dt = raw[RELEVANT]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -92,19 +93,18 @@
      "text": [
       "\\begin{tabular}{lrrrrrrrrrrr}\n",
       "\\toprule\n",
-      "{} &  IdentificationSelf &  UnderstandingSelf &  ExpressionSelf &  RegulationSelf &   UseSelf &  IdentificationOthers &  UnderstandingOthers &  ExpressionOthers &  RegulationOthers &  UseOthers &  TotalTraitEmotion \\\\\n",
+      "Identification S. &   1 &      &     &      &      &      &     &      &     &     &   \\\\\n",
       "\\midrule\n",
-      "IdentificationSelf   &            1.000000 &           0.483208 &        0.508196 &        0.066678 &  0.152394 &              0.080411 &             0.230340 &          0.102367 &          0.288235 &   0.009169 &           0.576122 \\\\\n",
-      "UnderstandingSelf    &            0.483208 &           1.000000 &        0.321345 &        0.237110 &  0.164942 &              0.128579 &             0.271955 &          0.239776 &          0.213501 &  -0.106814 &           0.573843 \\\\\n",
-      "ExpressionSelf       &            0.508196 &           0.321345 &        1.000000 &        0.148561 &  0.252514 &              0.344267 &             0.377190 &          0.241453 &          0.385991 &   0.004711 &           0.725128 \\\\\n",
-      "RegulationSelf       &            0.066678 &           0.237110 &        0.148561 &        1.000000 &  0.102744 &              0.180675 &             0.039968 &          0.231924 &          0.155086 &  -0.226844 &           0.402968 \\\\\n",
-      "UseSelf              &            0.152394 &           0.164942 &        0.252514 &        0.102744 &  1.000000 &              0.198152 &             0.171327 &          0.217404 &          0.226351 &  -0.139603 &           0.458303 \\\\\n",
-      "IdentificationOthers &            0.080411 &           0.128579 &        0.344267 &        0.180675 &  0.198152 &              1.000000 &             0.288057 &          0.261758 &          0.061377 &  -0.046355 &           0.477437 \\\\\n",
-      "UnderstandingOthers  &            0.230340 &           0.271955 &        0.377190 &        0.039968 &  0.171327 &              0.288057 &             1.000000 &          0.316039 &          0.298453 &   0.188450 &           0.606505 \\\\\n",
-      "ExpressionOthers     &            0.102367 &           0.239776 &        0.241453 &        0.231924 &  0.217404 &              0.261758 &             0.316039 &          1.000000 &          0.386990 &  -0.282212 &           0.528418 \\\\\n",
-      "RegulationOthers     &            0.288235 &           0.213501 &        0.385991 &        0.155086 &  0.226351 &              0.061377 &             0.298453 &          0.386990 &          1.000000 &   0.005424 &           0.602202 \\\\\n",
-      "UseOthers            &            0.009169 &          -0.106814 &        0.004711 &       -0.226844 & -0.139603 &             -0.046355 &             0.188450 &         -0.282212 &          0.005424 &   1.000000 &           0.097506 \\\\\n",
-      "TotalTraitEmotion    &            0.576122 &           0.573843 &        0.725128 &        0.402968 &  0.458303 &              0.477437 &             0.606505 &          0.528418 &          0.602202 &   0.097506 &           1.000000 \\\\\n",
+      "Understanding S.  & .48 &    1 &     &      &      &      &     &      &     &     &   \\\\\n",
+      "Expression S.     & .51 &  .32 &   1 &      &      &      &     &      &     &     &   \\\\\n",
+      "Regulation S.     & .07 &  .24 & .15 &    1 &      &      &     &      &     &     &   \\\\\n",
+      "Use S.            & .15 &  .16 & .25 &  .10 &    1 &      &     &      &     &     &   \\\\\n",
+      "Identification O. & .08 &  .13 & .34 &  .18 &  .20 &    1 &     &      &     &     &   \\\\\n",
+      "Understanding O.  & .23 &  .27 & .38 &  .04 &  .17 &  .29 &   1 &      &     &     &   \\\\\n",
+      "Expression O.     & .10 &  .24 & .24 &  .23 &  .22 &  .26 & .32 &    1 &     &     &   \\\\\n",
+      "Regulation O.     & .29 &  .21 & .39 &  .16 &  .23 &  .06 & .30 &  .39 &   1 &     &   \\\\\n",
+      "Use O.            & .01 & -.11 & .00 & -.23 & -.14 & -.05 & .19 & -.28 & .01 &   1 &   \\\\\n",
+      "TotalTraitEmotion & .58 &  .57 & .73 &  .40 &  .46 &  .48 & .61 &  .53 & .60 & .10 & 1 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -112,7 +112,22 @@
     }
    ],
    "source": [
-    "print dt[SPEC_SCALES].corr().to_latex()"
+    "def float_fmt(x):\n",
+    "    if x == 0:\n",
+    "        return \" \"\n",
+    "    s = \"%.2f\" % x\n",
+    "    if s[0] == \"0\":\n",
+    "        return unicode(s[1:])\n",
+    "    if s[0:2] == \"-0\":\n",
+    "        return \"-\" + unicode(s[2:])\n",
+    "    elif x > 0.9999:\n",
+    "        return u\"1\"\n",
+    "    else:\n",
+    "        return unicode(s)\n",
+    "corr_mtx = dt[SPEC_SCALES].corr().apply(lambda x: x.round(4))\n",
+    "corr_mtx.loc[:,:] =  np.tril(corr_mtx)\n",
+    "corr_mtx.index = (x.replace(\"Self\", \" S.\").replace(\"Others\", \" O.\") for x in corr_mtx.index)\n",
+    "print corr_mtx.to_latex(index_names=False, header=False, float_format=float_fmt)"
    ]
   },
   {
