--- a/speccorrmtx.tex
+++ b/speccorrmtx.tex
@@ -1,23 +1,24 @@
 \begin {table}[H]
-  \caption{Correlation matrix within the SPEC}
-  \label{table:speccorrmtx}
-  \begin{tabular}{lrrrrrrrrrrr}
-    \toprule
-        {} &  Identification Self &  Understanding Self &  Expression Self &  Regulation Self &   Use Self &  Identification Others &  Understanding Others &  Expression Others &  Regulation Others &  Use Others &  Total \\
-        \midrule
-        Identification Self   &            1.000000 &           0.483208 &        0.508196 &        0.066678 &  0.152394 &              0.080411 &             0.230340 &          0.102367 &          0.288235 &   0.009169 &           0.576122 \\
-        Understanding Self    &            0.483208 &           1.000000 &        0.321345 &        0.237110 &  0.164942 &              0.128579 &             0.271955 &          0.239776 &          0.213501 &  -0.106814 &           0.573843 \\
-        Expression Self       &            0.508196 &           0.321345 &        1.000000 &        0.148561 &  0.252514 &              0.344267 &             0.377190 &          0.241453 &          0.385991 &   0.004711 &           0.725128 \\
-        Regulation Self       &            0.066678 &           0.237110 &        0.148561 &        1.000000 &  0.102744 &              0.180675 &             0.039968 &          0.231924 &          0.155086 &  -0.226844 &           0.402968 \\
-        Use Self              &            0.152394 &           0.164942 &        0.252514 &        0.102744 &  1.000000 &              0.198152 &             0.171327 &          0.217404 &          0.226351 &  -0.139603 &           0.458303 \\
-        Identification Others &            0.080411 &           0.128579 &        0.344267 &        0.180675 &  0.198152 &              1.000000 &             0.288057 &          0.261758 &          0.061377 &  -0.046355 &           0.477437 \\
-        Understanding Others  &            0.230340 &           0.271955 &        0.377190 &        0.039968 &  0.171327 &              0.288057 &             1.000000 &          0.316039 &          0.298453 &   0.188450 &           0.606505 \\
-        Expression Others     &            0.102367 &           0.239776 &        0.241453 &        0.231924 &  0.217404 &              0.261758 &             0.316039 &          1.000000 &          0.386990 &  -0.282212 &           0.528418 \\
-        Regulation Others     &            0.288235 &           0.213501 &        0.385991 &        0.155086 &  0.226351 &              0.061377 &             0.298453 &          0.386990 &          1.000000 &   0.005424 &           0.602202 \\
-        Use Others            &            0.009169 &          -0.106814 &        0.004711 &       -0.226844 & -0.139603 &             -0.046355 &             0.188450 &         -0.282212 &          0.005424 &   1.000000 &           0.097506 \\
-        Total SPEC    &            0.576122 &           0.573843 &        0.725128 &        0.402968 &  0.458303 &              0.477437 &             0.606505 &          0.528418 &          0.602202 &   0.097506 &           1.000000 \\
-        \bottomrule
-  \end{tabular}
+  \caption[Correlation matrix between the sub-scales of the SPEC for the present study]{Correlation matrix between the sub-scales of the SPEC, S. = Self, O. = Others}
+\label{table:speccorrmtx}
+\begin{tabularx}{\textwidth}{lrrrrrrrrrrr}
+\toprule
+Variable & \multicolumn{11}{c}{Pearson's $r$} \\
+\midrule
+Identification S. &   1 &      &     &      &      &      &     &      &     &     &   \\
+
+Understanding S.  & .48 &    1 &     &      &      &      &     &      &     &     &   \\
+Expression S.     & .51 &  .32 &   1 &      &      &      &     &      &     &     &   \\
+Regulation S.     & .07 &  .24 & .15 &    1 &      &      &     &      &     &     &   \\
+Use S.            & .15 &  .16 & .25 &  .10 &    1 &      &     &      &     &     &   \\
+Identification O. & .08 &  .13 & .34 &  .18 &  .20 &    1 &     &      &     &     &   \\
+Understanding O.  & .23 &  .27 & .38 &  .04 &  .17 &  .29 &   1 &      &     &     &   \\
+Expression O.     & .10 &  .24 & .24 &  .23 &  .22 &  .26 & .32 &    1 &     &     &   \\
+Regulation O.     & .29 &  .21 & .39 &  .16 &  .23 &  .06 & .30 &  .39 &   1 &     &   \\
+Use O.            & .01 & -.11 & .00 & -.23 & -.14 & -.05 & .19 & -.28 & .01 &   1 &   \\
+\midrule
+\textbf{Overall} & .58 &  .57 & .73 &  .40 &  .46 &  .48 & .61 &  .53 & .60 & .10 & 1 \\
+\end{tabularx}
 \end{table}
 
 
@@ -25,9 +26,9 @@
 \begin {table}[H]
   \caption{Correlations between the SPEC sub-scales and the METT}
   \label{table:specmettcorr}
-  \begin{tabular}{lr}
+  \begin{tabularx}{\textwidth}{lr}
     \toprule
-    SPEC sub-scale &       r \\
+    SPEC sub-scale & Pearson's $r$ \\
     \midrule
     Identification  Self   &  0.0831 \\
     Understanding  Self    &  0.2260 \\
@@ -40,7 +41,7 @@
     Regulation  Others     &  0.1050 \\
     Use  Others            & -0.2848 \\
     \midrule
-    \textbf{Total}      &  0.1178 \\
+    \textbf{Overall}  &  0.1178 \\
     \bottomrule
-  \end{tabular}
+  \end{tabularx}
 \end{table}
