--- a/stimsets.tex
+++ b/stimsets.tex
@@ -1,6 +1,6 @@
 \begin {table}[H]
   \caption{Common stimulus-sets for facial expression}
-  \label{table:stimsets}
+\label{table:stimsets}
   \begin{tabularx}{\textwidth}{lllll}
     & \textbf{$N_{models}$} & \textbf{$N_{expressions}$} & \textbf{$N_{angles}$} & \textbf{Ethnicities} \\
     \toprule
@@ -9,7 +9,7 @@
     MSFDE   & 4  &  6 & 1 & French Canadian, Chinese sub-Saharan African \\
     RaFD    & 49 &  8 & 5 & European \& Moroccan \\
     NimStim & 43 &  9 & 1 & African-, Asian- European- \& Latin-American \\
-    GEMEP   & 10 & 18 & 3 & European
+    GEMEP   & 10 & 18 & 3 & European \\
     \bottomrule
   \end{tabularx}
 \end{table}
