--- a/speccorrmtx.tex
+++ b/speccorrmtx.tex
@@ -24,22 +24,22 @@ Use O.            & .01 & -.11 & .00 & -.23 & -.14 & -.05 & .19 & -.28 & .01 &  
 
 
 \begin {table}[H]
-  \caption{Correlations between the SPEC sub-scales and the METT}
+  \caption{Correlations between the SPEC sub-scales and the METT, and test-retest correlations for SPEC}
   \label{table:specmettcorr}
-  \begin{tabularx}{\textwidth}{lr}
+  \begin{tabularx}{\textwidth}{lrr}
     \toprule
-    SPEC sub-scale & Pearson's $r$ \\
+    SPEC sub-scale & $r$ with METT &  Test-retest $r$ within SPEC \\
     \midrule
-    Identification  Self   &  0.0831 \\
-    Understanding  Self    &  0.2260 \\
-    Expression  Self       &  0.1861 \\
-    Regulation  Self       & -0.0633 \\
-    Use  Self              & -0.0672 \\
-    Identification  Others &  0.0948 \\
-    Understanding  Others  &  0.1709 \\
-    Expression  Others     &  0.2091 \\
-    Regulation  Others     &  0.1050 \\
-    Use  Others            & -0.2848 \\
+    Identification  Self   &  0.0831 & 0.482 \\
+    Understanding  Self    &  0.2260 & 0.491 \\
+    Expression  Self       &  0.1861 & 0.654 \\
+    Regulation  Self       & -0.0633 & 0.594 \\
+    Use  Self              & -0.0672 & 0.221 \\
+    Identification  Others &  0.0948 & 0.549 \\
+    Understanding  Others  &  0.1709 & 0.388 \\
+    Expression  Others     &  0.2091 & 0.515 \\
+    Regulation  Others     &  0.1050 & 0.241 \\
+    Use  Others            & -0.2848 & 0.659 \\
     \midrule
     \textbf{Overall}  &  0.1178 \\
     \bottomrule
