--- a/refs.bib
+++ b/refs.bib
@@ -957,3 +957,33 @@ year = {2008}
     year = {2015},
     url = {http://www.R-project.org/},
   }
+
+@Misc{SciPy,
+  author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
+  title =     {{SciPy}: Open source scientific tools for {Python}},
+  year =      {2001--},
+  url = "http://www.scipy.org/",
+  note = {[Online; accessed 2015-05-07]}
+}
+
+@ARTICLE{IPython, 
+author={Pérez, F. and Granger, B.E.}, 
+journal={Computing in Science Engineering}, 
+title={IPython: A System for Interactive Scientific Computing}, 
+year={2007}, 
+month={May}, 
+volume={9}, 
+number={3}, 
+pages={21-29}, 
+keywords={data visualisation;natural sciences computing;object-oriented languages;object-oriented programming;parallel programming;software libraries;IPython;comprehensive library;data visualization;distributed computation;interactive scientific computing;parallel computation;Data analysis;Data visualization;Hardware;Libraries;Parallel processing;Production;Scientific computing;Spine;Supercomputers;Testing;Python;computer languages;scientific computing;scientific programming}, 
+doi={10.1109/MCSE.2007.53}, 
+ISSN={1521-9615},}
+
+@InProceedings{mckinney-proc-scipy-2010,
+  author    = { Wes McKinney },
+  title     = { Data Structures for Statistical Computing in Python },
+  booktitle = { Proceedings of the 9th Python in Science Conference },
+  pages     = { 51 - 56 },
+  year      = { 2010 },
+  editor    = { St\'efan van der Walt and Jarrod Millman }
+}
